--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0"
+    "mongodb": "^5.6.0",
+    "mongoose": "^6.9.0",
+    "mongose": "^0.0.2-security"
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
-    "nodemon": "^2.0.20"
+    "eslint": "^8.44.0",
+    "nodemon": "^2.0.22"
   }
 }
