--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0",
-    "mongoose": "^6.9.0",
-    "mongose": "^0.0.2-security"
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^6.11.2",
+    "mongose": "^0.0.2-security",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
