--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "express": "^4.18.2",
     "is-empty": "^1.2.0",
     "mongodb": "^5.7.0",
-    "mongoose": "^6.11.2",
-    "mongose": "^0.0.2-security"
+    "mongoose": "^6.11.2"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
