--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "is-empty": "^1.2.0",
     "mongodb": "^5.7.0",
-    "mongoose": "^6.11.4"
+    "mongoose": "^6.11.4",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
